--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0",
     "uuid": "^8.3.1",
-    "web3": "^1.3.0"
+    "web3": "^1.3.0",
+    "xmlhttprequest": "1.8.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
