--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp": "^4.0.2",
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
+    "node-fetch": "^2.6.1",
     "nodemon": "^1.19.4",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0",
