--- a/.babelrc
+++ b/.babelrc
@@ -5,5 +5,10 @@
        "browsers": ["last 2 versions", "safari >= 10"]
      }
    }]
- ]
+ ],
+ "plugins": [
+  ["transform-runtime", {
+    "regenerator": true
+  }]
+]
 }
