--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "start": "nodemon --exec babel-node src/bin/www --verbose",
-    "build": "rm -rf dist && babel src --out-dir dist && babel src/bin/www --out-dir dist/ && mv dist/src/bin dist/bin && rm -rf dist/src && mkdir dist/config && cp src/config/config.json dist/config/config.json",
+    "build": "rm -rf dist && babel src --out-dir dist && babel src/bin/www --out-dir dist/ && mv dist/src/bin dist/bin && rm -rf dist/src",
     "serve": "node dist/bin/www.js",
     "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha tests --timeout 15000 --recursive --compilers js:babel-core/register",
     "migrate": "./node_modules/.bin/sequelize db:migrate",
@@ -29,7 +29,9 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-env": "^1.5.2"
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
