--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.4",
+    "ethereumjs-tx": "^2.1.2",
     "express": "^4.17.1",
     "gulp": "^4.0.2",
     "http-status-codes": "^2.1.4",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
     "node-fetch": "^2.6.1",
