--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
     "start": "nodemon --exec babel-node src/bin/www --verbose",
     "build": "rm -rf dist && babel src --out-dir dist && babel src/bin/www --out-dir dist/ && mv dist/src/bin dist/bin && rm -rf dist/src",
     "serve": "node dist/bin/www.js",
-    "test": "mocha --require babel-core/register --require babel-polyfill --recursive",
+    "test": "mocha --require babel-core/register --require babel-polyfill --recursive --exit",
     "migrate": "./node_modules/.bin/sequelize db:migrate",
     "seed": "./node_modules/.bin/sequelize db:seed:all"
   },
   "dependencies": {
     "app-root-path": "^2.2.1",
     "body-parser": "^1.19.0",
+    "chai-http": "^4.3.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.4",
     "ethereumjs-tx": "^2.1.2",
@@ -25,6 +26,8 @@
     "nodemon": "^1.19.4",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0",
+    "supertest": "^6.1.3",
+    "supertest-as-promised": "^4.0.2",
     "uuid": "^8.3.1",
     "web3": "^1.3.0",
     "xmlhttprequest": "1.8.0"
