--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp": "^4.0.2",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
     "node-fetch": "^2.6.1",
