--- a/package.json
+++ b/package.json
@@ -11,17 +11,24 @@
     "seed": "cd sequelize  && ../node_modules/.bin/sequelize db:seed:all"
   },
   "dependencies": {
+    "@iota/converter": "^1.0.0-beta.30",
+    "@iota/mam": "^0.7.3",
+    "aeicontract": "0.0.1",
     "app-root-path": "^2.2.1",
     "body-parser": "^1.19.0",
     "chai-http": "^4.3.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.4",
     "ethereumjs-tx": "^2.1.2",
+    "ethereumjs-util": "^7.0.10",
     "express": "^4.17.1",
     "gulp": "^4.0.2",
     "http-status-codes": "^2.1.4",
+    "ipfs-api": "^26.1.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "md5": "^2.3.0",
+    "merkletreejs": "^0.2.18",
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
     "node-fetch": "^2.6.1",
@@ -32,6 +39,7 @@
     "supertest-as-promised": "^4.0.2",
     "uuid": "^8.3.1",
     "web3": "^1.3.0",
+    "web3-eth-contract": "^1.3.5",
     "xmlhttprequest": "1.8.0"
   },
   "devDependencies": {
