--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@iota/converter": "^1.0.0-beta.30",
     "@iota/mam": "^0.7.3",
-    "aeicontract": "0.0.1",
+    "aeicontract": "0.0.2",
     "app-root-path": "^2.2.1",
     "body-parser": "^1.19.0",
     "chai-http": "^4.3.0",
@@ -31,6 +31,7 @@
     "merkletreejs": "^0.2.18",
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
+    "nested-keys": "0.0.2",
     "node-fetch": "^2.6.1",
     "nodemon": "^1.19.4",
     "sequelize": "^6.3.5",
@@ -40,6 +41,7 @@
     "uuid": "^8.3.1",
     "web3": "^1.3.0",
     "web3-eth-contract": "^1.3.5",
+    "winston": "^3.3.3",
     "xmlhttprequest": "1.8.0"
   },
   "devDependencies": {
