--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node dist/bin/www.js",
     "test": "mocha --require babel-core/register --require babel-polyfill --recursive --exit",
     "migrate": "cd sequelize  && ../node_modules/.bin/sequelize db:migrate",
-    "seed": "cd sequelize  && ../node_modules/.bin/sequelize db:seed:all"
+    "seed": "cd sequelize && ../node_modules/.bin/sequelize db:seed:all",
+    "dbinit": "node ./sequelize/create.js && npm run migrate"
   },
   "dependencies": {
     "@iota/converter": "^1.0.0-beta.30",
