--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "rm -rf dist && babel src --out-dir dist && babel src/bin/* --out-dir dist && mv dist/src/bin dist && rm -rf dist/src",
     "start": "node dist/bin/www.js",
     "test": "mocha --require babel-core/register --require babel-polyfill --recursive --exit",
-    "migrate": "cd sequelize  && ../node_modules/.bin/sequelize db:migrate",
-    "seed": "cd sequelize && ../node_modules/.bin/sequelize db:seed:all",
+    "create": "cd sequelize  && ../node_modules/.bin/sequelize --env development db:create",
+    "migrate": "cd sequelize  && ../node_modules/.bin/sequelize --env development db:migrate",
+    "seed": "cd sequelize && ../node_modules/.bin/sequelize --env development db:seed:all",
     "dbinit": "node ./sequelize/create.js && npm run migrate"
   },
   "dependencies": {
