--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "http-status-codes": "^2.1.4",
     "ipfs-api": "^26.1.2",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "merkletreejs": "^0.2.18",
     "moment": "^2.29.1",
@@ -42,8 +42,8 @@
     "supertest": "^6.1.3",
     "supertest-as-promised": "^4.0.2",
     "uuid": "^8.3.1",
-    "web3": "^1.3.0",
-    "web3-eth-contract": "^1.3.5",
+    "web3": "^1.3.6",
+    "web3-eth-contract": "^1.3.6",
     "winston": "^3.3.3",
     "xmlhttprequest": "1.8.0"
   },
@@ -53,7 +53,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
-    "mocha": "^8.2.1",
-    "chai": "^4.2.0"
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1"
   }
 }
