--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,14 +5,18 @@ site_description: CanisMajor Documentation
 docs_dir: docs
 site_dir: html
 edit_uri: edit/master/docs/
-markdown_extensions: [toc,fenced_code]
+markdown_extensions: [toc, fenced_code]
 use_directory_urls: false
 theme: readthedocs
-extra_css: ["https://www.fiware.org/style/fiware_readthedocs.css", "https://www.fiware.org/style/fiware_readthedocs_core.css"]
-google_analytics: ['', '']
+extra_css:
+    [
+        "https://www.fiware.org/style/fiware_readthedocs.css",
+        "https://www.fiware.org/style/fiware_readthedocs_iot.css",
+    ]
+# google_analytics: ["", ""]
 pages:
     - Home: index.md
-    - 'Architecture': architecture.md
-    - 'Installation' : installation.md
-    - 'Usage': usage.md
-    - 'APIs': apis.md
+    - "Architecture": architecture.md
+    - "Installation": installation.md
+    - "Usage": usage.md
+    - "APIs": apis.md
