--- a/package.json
+++ b/package.json
@@ -24,27 +24,26 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.4",
     "ethereumjs-tx": "^2.1.2",
-    "ethereumjs-util": "^7.0.10",
+    "ethereumjs-util": "^7.1.0",
     "express": "^4.17.1",
     "gulp": "^4.0.2",
     "http-status-codes": "^2.1.4",
-    "ipfs-api": "^26.1.2",
+    "ipfs-http-client": "^50.1.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
-    "merkletreejs": "^0.2.18",
+    "merkletreejs": "^0.2.22",
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
     "nested-keys": "0.0.2",
     "node-fetch": "^2.6.1",
-    "nodemon": "^1.19.4",
-    "sequelize": "^6.3.5",
+    "sequelize": "^6.6.5",
     "sequelize-cli": "^6.2.0",
     "supertest": "^6.1.3",
     "supertest-as-promised": "^4.0.2",
-    "uuid": "^8.3.1",
-    "web3": "^1.3.6",
-    "web3-eth-contract": "^1.3.6",
+    "uuid": "^8.3.2",
+    "web3": "^1.4.0",
+    "web3-eth-contract": "^1.4.0",
     "winston": "^3.3.3",
     "xmlhttprequest": "1.8.0"
   },
@@ -54,7 +53,8 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
-    "chai": "^4.2.0",
-    "mocha": "^8.2.1"
+    "chai": "^4.3.4",
+    "mocha": "^8.4.0",
+    "nodemon": "^2.0.9"
   }
 }
