--- a/package.json
+++ b/package.json
@@ -45,14 +45,14 @@
     "web3": "^1.4.0",
     "web3-eth-contract": "^1.4.0",
     "winston": "^3.3.3",
-    "xmlhttprequest": "1.8.0"
-  },
-  "devDependencies": {
+    "xmlhttprequest": "1.8.0",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.5.2",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1"
+  },
+  "devDependencies": {
     "chai": "^4.3.4",
     "mocha": "^8.4.0",
     "nodemon": "^2.0.9"
