--- a/it/pom.xml
+++ b/it/pom.xml
@@ -30,6 +30,8 @@
 
         <!-- cucumber token, see: https://reports.cucumber.io -->
         <cucumber.publish-token>CUCUMBER_PUBLISH_TOKEN</cucumber.publish-token>
+        <!-- test blockchain -->
+        <storagetype>merkle</storagetype>
     </properties>
 
     <dependencyManagement>
